js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib2/MyClass.kt
private class MyClass : C {
}

internal val myObject: C = MyClass()
